deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sagan-app
---
# Frontend Deployment (Streamlit)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: sagan-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: sagan-frontend-ksa
      nodeSelector:
        ://cloud.google.com: "spot-frontend-pool"
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
      containers:
      - name: frontend
        image: us-central1-docker.pkg.dev/sagan-5/sagan-image-repo/sagan-frontend:v2
        workingDir: /app
        command: ["/opt/venv-frontend/bin/streamlit"]
        args: [
          "run", "main.py", 
          "--server.address", "0.0.0.0",
          "--server.port", "8501",
          "--client.toolbarMode", "hidden",
          "--server.enableCORS", "false",
          "--server.enableXsrfProtection", "false",
          "--browser.serverAddress", "app.wylderhayes.com",
          "--browser.serverPort", "443"
        ]
        # ADDED REQUESTS TO FIX VS CODE WARNING
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 8501
---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: sagan-app
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http-frontend
      port: 80
      targetPort: 8501
---
# Backend Deployment (FastAPI)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: sagan-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        gke-gcsview.io/volumes: "true"
    spec:
      serviceAccountName: sagan-backend-ksa
      nodeSelector:
        ://cloud.google.com: "spot-backend-pool"
      tolerations: 
      - key: "dedicated"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999 
      containers:
      - name: backend
        image: us-central1-docker.pkg.dev/sagan-5/sagan-image-repo/sagan-backend:v3
        command: ["/opt/venv-backend/bin/uvicorn"]
        args: ["main:app", "--host", "0.0.0.0", "--port", "8000"]
        # ADDED REQUESTS TO FIX VS CODE WARNING
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "4Gi"
            cpu: "2000m"
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: "/app/data" 
          name: fuse-volume
      volumes:
      - name: fuse-volume
        csi:
          driver: gcsfuse.csi.storage.gke.io
          volumeAttributes:
            bucketName: sagan-bucket
            mountOptions: "uid=999,gid=999"
---
# Backend Service
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: sagan-app
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
