httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sagan-route
  namespace: sagan-app
spec:
  parentRefs:
  - name: sagan-gateway
    sectionName: http  # Binds this rule ONLY to the Port 80 listener
  hostnames:
  - "app.wylderhayes.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sagan-https-route
  namespace: sagan-app
spec:
  parentRefs:
  - name: sagan-gateway
    sectionName: https # Binds this rule ONLY to the Port 443 listener
  hostnames:
  - "app.wylderhayes.com"
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: frontend-service
      port: 80
    timeouts:
      request: 3600s # Critical for Streamlit WebSockets
